force-app/main/default/objects/AHA_EasyMilestones_Milestone_Validation__mdt/AHA_EasyMilestones_Milestone_Validation__mdt.object-meta.xml
<CustomObject>
    <label>AHA Easy Milestones Milestone Validation</label>
    <pluralLabel>AHA Easy Milestones Milestone Validations</pluralLabel>
</CustomObject>