force-app/main/default/objects/AHA_EasyMilestones_Milestone_Validation__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>