force-app/main/default/objects/AHA_EasyMilestones_Milestone_Validation__mdt/fields/Process_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Process_Milestone__c</fullName>
    <label>Process Milestone</label>
    <type>MetadataRelationship</type>
    <relationshipName>Process_Milestone</relationshipName>
    <referenceTo>AHA_EasyMilestones_Process_Milestone__mdt</referenceTo>
</CustomField>