force-app/main/default/objects/AHA_EasyMilestones_Milestone_Validation__mdt/fields/Validation_Rule_JSON__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_JSON__c</fullName>
    <label>Validation Rule JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>